--- a/apphub/3x-ui/latest/docker-compose.yml
+++ b/apphub/3x-ui/latest/docker-compose.yml
@@ -1,12 +1,24 @@
-version: '3.8'
 services:
   x-ui:
     image: ghcr.io/mhsanaei/3x-ui:latest
-    container_name: 3x-ui
-    volumes:
-      - ./db/:/etc/x-ui/
-      - ./cert/:/root/cert/
+    deploy:
+      resources:
+        limits:
+          cpus: ${CPUS}
+          memory: ${MEMORY_LIMIT}
     environment:
       - XRAY_VMESS_AEAD_FORCED=false
-    network_mode: host
-    restart: unless-stopped
+    ports:
+      - ${HOST_IP}:${WEB_PORT}:2053
+    restart: always
+    volumes:
+      - ${APP_PATH}/data:/etc/x-ui/
+      - ${APP_PATH}/cert:/root/cert/
+    labels:
+      createdBy: "bt_apps"
+    networks:
+      - baota_net
+
+networks:
+  baota_net:
+    external: true
